# extensions-OpenGLSelection

./: CMakeLists.txt  OpenGLSelection.dist
Utils/: CameraTool.cpp  CameraTool.h  GLSceneSelection.cpp  GLSceneSelection.h  ISceneSelection.h  ITool.h  MouseSelection.cpp  MouseSelection.h  MouseSelector.cpp  MouseSelector.h  OSDButton.cpp  OSDButton.h  OSDCircularSlider.cpp  OSDCircularSlider.h  OSDCollection.cpp  OSDCollection.h  OSDIRenderer.h  OSDIWidget.h  OSDRenderer.cpp  OSDRenderer.h  OSDSlider.cpp  OSDSlider.h  PointingDevice.h  SceneSelector.cpp  SceneSelector.h  SelectionTool.cpp  SelectionTool.h  TODO  ToolChain.cpp  ToolChain.h  TransformationSelector.cpp  TransformationSelector.h  TransformationTool.cpp  TransformationTool.h  WidgetTool.cpp  WidgetTool.h
Widgets/: Button.cpp  Button.h  CircularSlider.cpp  CircularSlider.h  Collection.cpp  Collection.h  IWidget.h  IWidgetRenderer.h  Slider.cpp  Slider.h  ValueWidget.h  WidgetRenderer.cpp  WidgetRenderer.h  Widgifier.h
